# llm-app-with-genui

./: README.md
client/: eslint.config.mjs  package-lock.json  package.json
client/.github/: copilot-instructions.md
client/src/app/: error.tsx  layout.tsx  not-found.tsx  page.tsx
client/src/components/: app-container.tsx  layout.tsx  left-sidebar.tsx  (+1 more)
server/: .env.example  .gitignore  pyproject.toml
server/.github/instructions/: instructions.md
server/alembic/: env.py
server/alembic/versions/: 1a3e21da035c_fileid_identity.py  5871a397d597_component_field.py  5974e18b52d9_files_changes.py  6086b09917c7_fileid.py  c04a223caa8f_content_to_nullable.py  da785fd1dd01_init.py  e22867a48940_fileid_auto.py  e2543afd2816_test_dataset.py  f0d5c46f1bee_fileid_remove.py  f78619b0f75e_files_table.py
server/app/: main.py  server.py
server/app/agents/: bar_chart_agent.py  card_agent.py  chat_agent.py  component_supervisor_agent.py  line_chart_agent.py  research_agent.py  section_agent.py  sql_query_agent.py  summary_agent.py  supervisor_agent.py  table_agent.py  ui_builder_agent.py
server/app/api/endpoints/: chat_sessions.py  multi_agent.py
server/app/db/: database.py
server/app/mock/: seed-dataset.py  seed.py
server/app/models/: bar_chart_model.py  chat_session.py  line_chart_model.py  state_model.py  test_dataset.py
server/app/services/: chat_session_service.py  dataset_service.py  env_config_service.py  file_service.py  multi_agent_orchestrator_service.py
server/test-files/: company_data.csv  company_data.json  company_report.docx  quarterly_sales.xlsx
(+23 files in other folders)
