[tool.poetry]
name = "app"
version = "0.1.0"
description = "LangChain playground boilerplate project."
authors = ["baxy5 <bakos.soda@gmail.com>"]

[tool.poetry.scripts]
start = 'app.server:main'

[tool.poetry.dependencies]
python = "^3.9"
fastapi = { extras = ["standard"], version = "^0.116.1" }
uvicorn = "^0.35.0"
langgraph = "^0.6.6"
langchain = { extras = ["openai"], version = "^0.3.27" }
langchain-community = "0.3.31"
langgraph-checkpoint-postgres = "2.0.23"
pydantic-settings = "^2.2.1"
psycopg = { extras = ["binary"], version = "^3.2.10" }
psycopg2-binary = "^2.9.10"
langchain-tavily = "^0.2.11"
sqlalchemy = "^2.0.43"
alembic = "^1.16.5"
pypdf = "6.1.1"
unstructured = "0.7.12"
jq = "^1.10.0"
docx2txt = "^0.9"


[tool.poetry.group.dev.dependencies]
ruff = "^0.12.10"
deptry = "^0.23.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
indent-width = 2
# Sort imports
lint.extend-select = ["I"]
exclude = [".git", "__pycache__", ".venv"]
